hydromel/tests/errors/type-concat-unbounded-operand.mel.rkt
#lang racket

(require "type-concat-unbounded-operand.mel")

(C)
